--- a/app/src/main/res/layout/activity_register_store.xml
+++ b/app/src/main/res/layout/activity_register_store.xml
@@ -34,39 +34,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_register_store_name" />
 
-    <ImageButton
-        android:id="@+id/imageButton_register_store_picture"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:clickable="true"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/_register_store_picture_title"
-        app:srcCompat="@drawable/ic_camera_24dp" />
-
-    <TextView
-        android:id="@+id/_register_store_picture_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:text="Gambar Toko"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_register_store_description" />
-
     <Button
         android:id="@+id/button_register_store"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@color/baseColor"
         android:padding="8dp"
         android:text="Tambah Toko"
         android:textColor="@android:color/white"
-        android:background="@color/baseColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_register_store_picture" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_register_store_closed" />
+
+    <EditText
+        android:id="@+id/editText_register_store_open"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:clickable="true"
+        android:focusable="false"
+        android:hint="Jam Buka"
+        android:inputType="time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_register_store_description" />
+
+    <EditText
+        android:id="@+id/editText_register_store_closed"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:clickable="true"
+        android:focusable="false"
+        android:hint="Jam Tutup"
+        android:inputType="time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_register_store_open" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
