Longclick item success

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="baseColor">#0BB594</color>
+    <color name="selectedColor">#E0E0E0</color>
 </resources>
