--- a/app/src/main/res/layout/list_item_store.xml
+++ b/app/src/main/res/layout/list_item_store.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?attr/selectableItemBackground"
+    android:background="@drawable/selector_item"
     android:orientation="vertical">
 
     <TextView
