--- a/app/src/main/res/menu/catalog_context.xml
+++ b/app/src/main/res/menu/catalog_context.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_edit"
+        android:title="@string/edit"
+        android:icon="@drawable/ic_edit_24dp"
+        app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/action_delete"
+        android:title="@string/delete"
+        android:icon="@drawable/ic_delete_24dp"
+        app:showAsAction="ifRoom" />
 </menu>
