--- a/app/src/main/res/layout/list_main_store.xml
+++ b/app/src/main/res/layout/list_main_store.xml
@@ -13,11 +13,13 @@
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:padding="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@drawable/logo" />
 
     <TextView
         android:id="@+id/textView_list_main_stores_desc"
@@ -47,6 +49,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_list_main_stores_desc"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent" />
@@ -55,8 +58,8 @@
         android:id="@+id/textView_list_main_stores_jam_tutup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="14dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView_list_main_stores_jam_buka" />
