--- a/app/src/main/res/layout/activity_store_profile.xml
+++ b/app/src/main/res/layout/activity_store_profile.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_store_detail_desc"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
